--- a/demos_argumentation.ipynb
+++ b/demos_argumentation.ipynb
@@ -1,13 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Xpzy2CGyrtzg"
    },
    "source": [
-    "# Args generation on tabular data\n",
-    "Examples from Leila's paper"
+    "# Args generation on tabular data"
    ]
   },
   {
