--- a/experiments/ijcai/exp_adultshort.ipynb
+++ b/experiments/ijcai/exp_adultshort.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,8 @@
       "12 potential arg checked ( 593 not minimal)\n",
       "len  9 : 0 ,  0\n",
       "0 potential arg checked ( 75 not minimal)\n",
-      "Saving to  ../../saves\\adultshort_100_minimals.df\n"
+      "Saving to  ../../saves\\adultshort_100_minimals.df\n",
+      "{'Age': {0, 1, 2, 3}, 'Workclass': {4, 5, 6, 7, 8, 9, 10}, 'Marital Status': {11, 12, 13, 14, 15}, 'Relationship': {16, 17, 18, 19, 20, 21}, 'Race': {24, 22, 23}, 'Sex': {25, 26}, 'Capital Gain': {27, 28, 29}, 'Capital Loss': {32, 30, 31}, 'Hours per week': {33, 34, 35}}\n"
      ]
     }
    ],
@@ -209,12 +210,14 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'adultshort_' + str(nb_vals), compute=True, output_path='../../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'adultshort_' + str(nb_vals), compute=True, output_path='../../saves')\n",
+    "\n",
+    "print(explainer.features_p_col)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +225,8 @@
      "output_type": "stream",
      "text": [
       "adultshort_100\n",
-      "edges per node: 33.15068493150685\n"
+      "edges per node: 33.15068493150685\n",
+      "146\n"
      ]
     }
    ],
@@ -230,7 +234,8 @@
     "G = explainer.build_attack_graph(compute=True, display_graph=False)\n",
     "print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
     "\n",
-    "explainer.export_graph('asp', '../../saves')"
+    "explainer.export_graph('asp', '../../saves')\n",
+    "print(len(G.nodes()))"
    ]
   },
   {
@@ -739,25 +744,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pre-processing file...\n",
-      "Done\n",
-      "Reading ../saves/adult_100_sat_preprocessed.txt\n",
-      "Time for selection:  267.0480635166168\n",
-      "Len max_cov_exts:  6\n"
+      "Using pre-processed file...\n",
+      "Reading ../../saves/adultshort_100_sat_preprocessed.txt\n",
+      "Time for selection:  4.993837594985962\n",
+      "Len max_cov_exts:  1\n",
+      "id: 0 coverage: 0 Arg 1/0: None\n",
+      "id: 1 coverage: 13 Arg 1/5: frozenset({'Sex_Female', 'Relationship_Not-in-family', 'Workclass_State-gov'})\n",
+      "id: 2 coverage: 12 Arg 1/8: frozenset({'Sex_Female', 'Age_Age > 48.00', 'Capital Loss_0', 'Hours per week_Hours per week <= 40.00', 'Capital Gain_0'})\n",
+      "id: 3 coverage: 17 Arg 1/8: frozenset({'Relationship_Not-in-family', 'Age_28.00 < Age <= 37.00', 'Race_White'})\n",
+      "id: 4 coverage: 0 Arg 1/0: None\n",
+      "id: 5 coverage: 0 Arg 1/0: None\n",
+      "id: 6 coverage: 10 Arg 1/11: frozenset({'Capital Gain_0', 'Marital Status_Divorced', 'Age_37.00 < Age <= 48.00'})\n",
+      "id: 7 coverage: 0 Arg 1/0: None\n",
+      "id: 8 coverage: 12 Arg 1/9: frozenset({'Marital Status_Divorced', 'Age_Age > 48.00', 'Sex_Male'})\n",
+      "id: 9 coverage: 0 Arg 1/0: None\n",
+      "id: 10 coverage: 0 Arg 1/0: None\n",
+      "id: 11 coverage: 0 Arg 1/0: None\n",
+      "id: 12 coverage: 16 Arg 1/4: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week <= 40.00'})\n",
+      "id: 13 coverage: 19 Arg 1/4: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week <= 40.00'})\n",
+      "id: 14 coverage: 0 Arg 1/0: None\n",
+      "id: 15 coverage: 0 Arg 1/0: None\n",
+      "id: 16 coverage: 0 Arg 1/0: None\n",
+      "id: 17 coverage: 0 Arg 1/0: None\n",
+      "id: 18 coverage: 0 Arg 1/0: None\n",
+      "id: 19 coverage: 19 Arg 1/4: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week <= 40.00'})\n",
+      "id: 20 coverage: 3 Arg 1/3: frozenset({'Workclass_?', 'Age_Age > 48.00'})\n",
+      "id: 21 coverage: 0 Arg 1/0: None\n",
+      "id: 22 coverage: 19 Arg 1/12: frozenset({'Relationship_Not-in-family', 'Age_28.00 < Age <= 37.00', 'Race_White'})\n",
+      "id: 23 coverage: 20 Arg 1/11: frozenset({'Workclass_Federal-gov', 'Marital Status_Never-married'})\n",
+      "id: 24 coverage: 0 Arg 1/0: None\n",
+      "id: 25 coverage: 0 Arg 1/0: None\n",
+      "id: 26 coverage: 3 Arg 1/1: frozenset({'Age_Age > 48.00', 'Hours per week_Hours per week <= 40.00', 'Workclass_Self-emp-not-inc'})\n",
+      "id: 27 coverage: 0 Arg 1/0: None\n",
+      "id: 28 coverage: 10 Arg 1/11: frozenset({'Sex_Male', 'Marital Status_Divorced', 'Workclass_Local-gov'})\n",
+      "id: 29 coverage: 0 Arg 1/0: None\n",
+      "id: 30 coverage: 0 Arg 1/0: None\n",
+      "id: 31 coverage: 19 Arg 1/4: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week <= 40.00'})\n",
+      "id: 32 coverage: 0 Arg 1/0: None\n",
+      "id: 33 coverage: 14 Arg 1/7: frozenset({'Sex_Female', 'Age_Age > 48.00', 'Capital Loss_0', 'Hours per week_Hours per week <= 40.00', 'Capital Gain_0'})\n",
+      "id: 34 coverage: 0 Arg 1/0: None\n",
+      "id: 35 coverage: 16 Arg 1/4: frozenset({'Relationship_Own-child'})\n",
+      "id: 36 coverage: 4 Arg 1/1: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week > 45.00', 'Workclass_Private'})\n",
+      "id: 37 coverage: 0 Arg 1/0: None\n",
+      "id: 38 coverage: 0 Arg 1/0: None\n",
+      "id: 39 coverage: 0 Arg 1/0: None\n",
+      "id: 40 coverage: 0 Arg 1/0: None\n",
+      "id: 41 coverage: 12 Arg 1/8: frozenset({'Relationship_Not-in-family', 'Age_Age > 48.00', 'Workclass_Private'})\n",
+      "id: 42 coverage: 0 Arg 1/0: None\n",
+      "id: 43 coverage: 0 Arg 1/0: None\n",
+      "id: 44 coverage: 18 Arg 1/13: frozenset({'Relationship_Not-in-family', 'Age_Age > 48.00', 'Workclass_Private'})\n",
+      "id: 45 coverage: 0 Arg 1/0: None\n",
+      "id: 46 coverage: 26 Arg 1/10: frozenset({'Sex_Female', 'Marital Status_Never-married'})\n",
+      "id: 47 coverage: 0 Arg 1/0: None\n",
+      "id: 48 coverage: 0 Arg 1/0: None\n",
+      "id: 49 coverage: 16 Arg 1/1: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week <= 40.00'})\n",
+      "id: 50 coverage: 0 Arg 1/0: None\n",
+      "id: 51 coverage: 0 Arg 1/0: None\n",
+      "id: 52 coverage: 20 Arg 1/6: frozenset({'Relationship_Own-child'})\n",
+      "id: 53 coverage: 0 Arg 1/0: None\n",
+      "id: 54 coverage: 0 Arg 1/0: None\n",
+      "id: 55 coverage: 0 Arg 1/0: None\n",
+      "id: 56 coverage: 0 Arg 1/0: None\n",
+      "id: 57 coverage: 0 Arg 1/0: None\n",
+      "id: 58 coverage: 19 Arg 1/7: frozenset({'Relationship_Own-child'})\n",
+      "id: 59 coverage: 0 Arg 1/0: None\n",
+      "id: 60 coverage: 0 Arg 1/0: None\n",
+      "id: 61 coverage: 16 Arg 1/10: frozenset({'Relationship_Not-in-family', 'Age_Age > 48.00', 'Workclass_Private'})\n",
+      "id: 62 coverage: 0 Arg 1/0: None\n",
+      "id: 63 coverage: 3 Arg 1/1: frozenset({'Age_Age > 48.00', 'Hours per week_Hours per week <= 40.00', 'Workclass_Self-emp-not-inc'})\n",
+      "id: 64 coverage: 19 Arg 1/4: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week <= 40.00'})\n",
+      "id: 65 coverage: 16 Arg 1/3: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week <= 40.00'})\n",
+      "id: 66 coverage: 19 Arg 1/3: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week <= 40.00'})\n",
+      "id: 67 coverage: 0 Arg 1/0: None\n",
+      "id: 68 coverage: 22 Arg 1/7: frozenset({'Hours per week_Hours per week > 45.00', 'Marital Status_Never-married'})\n",
+      "id: 69 coverage: 0 Arg 1/0: None\n",
+      "id: 70 coverage: 0 Arg 1/0: None\n",
+      "id: 71 coverage: 12 Arg 1/9: frozenset({'Sex_Female', 'Age_Age > 48.00', 'Capital Loss_0', 'Hours per week_Hours per week <= 40.00', 'Capital Gain_0'})\n",
+      "id: 72 coverage: 0 Arg 1/0: None\n",
+      "id: 73 coverage: 12 Arg 1/11: frozenset({'Sex_Female', 'Age_Age > 48.00', 'Capital Loss_0', 'Hours per week_Hours per week <= 40.00', 'Capital Gain_0'})\n",
+      "id: 74 coverage: 20 Arg 1/6: frozenset({'Relationship_Own-child'})\n",
+      "id: 75 coverage: 4 Arg 1/1: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week > 45.00', 'Workclass_Private'})\n",
+      "id: 76 coverage: 0 Arg 1/0: None\n",
+      "id: 77 coverage: 0 Arg 1/0: None\n",
+      "id: 78 coverage: 0 Arg 1/0: None\n",
+      "id: 79 coverage: 22 Arg 1/10: frozenset({'Relationship_Not-in-family', 'Age_28.00 < Age <= 37.00', 'Race_White'})\n",
+      "id: 80 coverage: 0 Arg 1/0: None\n",
+      "id: 81 coverage: 3 Arg 1/1: frozenset({'Age_Age > 48.00', 'Hours per week_Hours per week <= 40.00', 'Workclass_Self-emp-not-inc'})\n",
+      "id: 82 coverage: 0 Arg 1/0: None\n",
+      "id: 83 coverage: 0 Arg 1/0: None\n",
+      "id: 84 coverage: 0 Arg 1/0: None\n",
+      "id: 85 coverage: 4 Arg 1/1: frozenset({'Age_Age <= 28.00', 'Hours per week_Hours per week > 45.00', 'Workclass_Private'})\n",
+      "id: 86 coverage: 5 Arg 1/4: frozenset({'Relationship_Not-in-family', 'Age_28.00 < Age <= 37.00', 'Race_White'})\n",
+      "id: 87 coverage: 0 Arg 1/0: None\n",
+      "id: 88 coverage: 0 Arg 1/0: None\n",
+      "id: 89 coverage: 0 Arg 1/0: None\n",
+      "id: 90 coverage: 0 Arg 1/0: None\n",
+      "id: 91 coverage: 17 Arg 1/6: frozenset({'Relationship_Not-in-family', 'Age_28.00 < Age <= 37.00', 'Race_White'})\n",
+      "id: 92 coverage: 0 Arg 1/0: None\n",
+      "id: 93 coverage: 0 Arg 1/0: None\n",
+      "id: 94 coverage: 0 Arg 1/0: None\n",
+      "id: 95 coverage: 0 Arg 1/0: None\n",
+      "id: 96 coverage: 26 Arg 1/10: frozenset({'Sex_Female', 'Marital Status_Never-married'})\n",
+      "id: 97 coverage: 0 Arg 1/0: None\n",
+      "id: 98 coverage: 0 Arg 1/0: None\n",
+      "id: 99 coverage: 19 Arg 1/12: frozenset({'Workclass_?', 'Age_Age <= 28.00'})\n",
+      "success =  0.4 (empty= 60 )\n"
      ]
     }
    ],
    "source": [
     "#ext_gen = explainer.extension_generator_from_graph()\n",
-    "ext_gen = explainer.extension_generator_from_sat(file='../saves/adult_100_sat.txt')\n",
-    "max_covi_ext = explainer.make_selection('max_covi', ext_gen)"
+    "ext_gen = explainer.extension_generator_from_sat(file='../../saves/adultshort_100_sat.txt')\n",
+    "#max_covi_ext = explainer.make_selection('max_covi_incl', ext_gen)\n",
+    "max_covi_ext = explainer.make_selection('max_card', ext_gen)\n",
+    "res = explainer.apply_inference(max_covi_ext, 'universal')\n",
+    "#print(res)\n",
+    "\n",
+    "explainer.display_explanations(verbose=True)"
    ]
   },
   {
@@ -1393,7 +1503,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
