--- a/experiments/ijcai/exp_titanic.ipynb
+++ b/experiments/ijcai/exp_titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "categorical_features = [2, 4, 7]\n",
     "\n",
     "target_idx = 1\n",
-    "dataset_folder = train_path = \"../../datasets/titanic/\"\n",
+    "dataset_folder = train_path = \"../../../datasets/titanic/\"\n",
     "discretize = True\n",
     "balance = True\n",
     "\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
    ],
    "source": [
     "import sys\n",
-    "sys.path.append(sys.path[0] + '/..')\n",
+    "sys.path.append(sys.path[0] + '/../..')\n",
     "\n",
     "import arg_explainer as ae\n",
     "from importlib import reload\n",
@@ -141,12 +141,12 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'titanic_' + str(nb_vals), compute=False, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'titanic_' + str(nb_vals), compute=False, output_path='../../saves')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
     "print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
     "print('nodes:', len(G.nodes()))\n",
     "\n",
-    "explainer.export_graph('asp', '../saves')"
+    "explainer.export_graph('asp', '../../saves')"
    ]
   },
   {
@@ -682,25 +682,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import OrderedDict\n",
+    "import networkx as nx\n",
+    "from sklearn import preprocessing\n",
+    "import random\n",
+    "from numba import njit\n",
+    "\n",
+    "le = preprocessing.LabelEncoder()\n",
+    "\n",
+    "\n",
+    "def generate_full_dataset():\n",
+    "    instance = OrderedDict.fromkeys(explainer.dataset.columns)\n",
+    "    full_dataset = []\n",
+    "\n",
+    "    def gen_rec(instance, columns, col_index, full_dataset):\n",
+    "        inst_ = instance.copy()\n",
+    "        if col_index == len(columns) - 1:\n",
+    "            for f in explainer.features_p_col[columns[col_index]]:\n",
+    "                inst_[columns[col_index]] = explainer.feature_names[f][len(columns[col_index])+1:] #.strip(columns[col_index] + '_')\n",
+    "                full_dataset.append(list(inst_.values()))\n",
+    "        else:\n",
+    "            inst_ = instance.copy()\n",
+    "            for f in explainer.features_p_col[columns[col_index]]:\n",
+    "                inst_[columns[col_index]] = explainer.feature_names[f][len(columns[col_index])+1:] #.strip(columns[col_index] + '_')\n",
+    "                gen_rec(inst_, columns, col_index + 1, full_dataset)\n",
+    "\n",
+    "    gen_rec(instance, list(instance.keys()), 0, full_dataset)\n",
+    "    return full_dataset\n",
+    "\n",
+    "def instance2encoded(instance, dataset):\n",
+    "    encoded = []\n",
+    "    for col in dataset.categorical_features:\n",
+    "        encoded.append(dataset.categorical_names[col].index(instance[col]))\n",
+    "    return np.array(encoded)\n",
+    "\n",
+    "def explore_full_dataset(nb_steps):\n",
+    "    full_dataset = generate_full_dataset()\n",
+    "    y_plus = [c.predict(instance2encoded(i_, dataset).reshape(1,-1))[0] for i_ in full_dataset]\n",
+    "    #train_data_plus = train_data = pd.DataFrame(transformed_data[:nb_vals] + transformed_data_plus, columns=dataset.feature_names)\n",
+    "    \n",
+    "    random.seed(1)\n",
+    "    indices = list(range(len(full_dataset)))\n",
+    "    random.shuffle(indices)\n",
+    "    full_dataset_shuff = [full_dataset[i] for i in indices] \n",
+    "    y_plus_shuff = [y_plus[i] for i in indices]\n",
+    "\n",
+    "    print(np.unique(np.array(y_plus_shuff)))\n",
+    "    \n",
+    "    step_len = len(full_dataset)//nb_steps\n",
+    "    steps = [i*step_len for i in range(1, nb_steps)]\n",
+    "    steps.append(len(full_dataset))\n",
+    "    for nb_vals in steps:\n",
+    "        dataset_t = full_dataset_shuff[:nb_vals]\n",
+    "        y_t = y_plus_shuff[:nb_vals]\n",
+    "        print('total length', len(dataset_t), len(y_t))\n",
+    "        train_data_plus = pd.DataFrame(dataset_t, columns=dataset.feature_names)\n",
+    "\n",
+    "        explainer = ae.ArgTabularExplainer(c, train_data_plus, y_t, 'titanis_' + str(nb_vals) + '_synth', compute=False, output_path='../../saves')\n",
+    "\n",
+    "        G = explainer.build_attack_graph(compute=False, display_graph=False)\n",
+    "        print('total args:', len(G.nodes()))\n",
+    "        print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
+    "\n",
+    "explore_full_dataset(16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Working with NetworkX to find naive extensions:\n",
-      "Graph density =  0.3447776329132261\n",
-      "Number of extensions:  2599\n",
-      "Time for selection:  0.08099961280822754\n",
-      "Len max_cov_exts:  1\n"
+      "Using pre-processed file...\n",
+      "Reading ../../saves/titanic_100_sat_preprocessed.txt\n",
+      "Time for selection:  198.88673877716064\n",
+      "Len max_cov_exts:  1\n",
+      "id: 0 coverage: 10 Arg 1/5: frozenset({'Parch_2', 'Age_6.00 < Age <= 24.00'})\n",
+      "id: 1 coverage: 0 Arg 1/0: None\n",
+      "id: 2 coverage: 0 Arg 1/0: None\n",
+      "id: 3 coverage: 0 Arg 1/0: None\n",
+      "id: 4 coverage: 0 Arg 1/0: None\n",
+      "id: 5 coverage: 3 Arg 1/2: frozenset({'Age_6.00 < Age <= 24.00', 'Parch_1'})\n",
+      "id: 6 coverage: 0 Arg 1/0: None\n",
+      "id: 7 coverage: 8 Arg 1/5: frozenset({'Pclass_3', 'Fare_Fare > 31.00', 'Age_24.00 < Age <= 35.00'})\n",
+      "id: 8 coverage: 0 Arg 1/0: None\n",
+      "id: 9 coverage: 22 Arg 1/8: frozenset({'Fare_Fare > 31.00', 'Age_Age > 35.00', 'Parch_0'})\n",
+      "id: 10 coverage: 0 Arg 1/0: None\n",
+      "id: 11 coverage: 0 Arg 1/0: None\n",
+      "id: 12 coverage: 0 Arg 1/0: None\n",
+      "id: 13 coverage: 0 Arg 1/0: None\n",
+      "id: 14 coverage: 22 Arg 1/8: frozenset({'Fare_Fare > 31.00', 'Age_Age > 35.00', 'Parch_0'})\n",
+      "id: 15 coverage: 0 Arg 1/0: None\n",
+      "id: 16 coverage: 0 Arg 1/0: None\n",
+      "id: 17 coverage: 0 Arg 1/0: None\n",
+      "id: 18 coverage: 0 Arg 1/0: None\n",
+      "id: 19 coverage: 4 Arg 1/4: frozenset({'Fare_14.45 < Fare <= 31.00', 'SibSp_SibSp <= 0.00', 'Age_24.00 < Age <= 35.00'})\n",
+      "id: 20 coverage: 18 Arg 1/3: frozenset({'Sex_female', 'Fare_7.92 < Fare <= 14.45'})\n",
+      "id: 21 coverage: 0 Arg 1/0: None\n",
+      "id: 22 coverage: 0 Arg 1/0: None\n",
+      "id: 23 coverage: 0 Arg 1/0: None\n",
+      "id: 24 coverage: 0 Arg 1/0: None\n",
+      "id: 25 coverage: 8 Arg 1/3: frozenset({'Fare_7.92 < Fare <= 14.45', 'Parch_1'})\n",
+      "id: 26 coverage: 0 Arg 1/0: None\n",
+      "id: 27 coverage: 0 Arg 1/0: None\n",
+      "id: 28 coverage: 0 Arg 1/0: None\n",
+      "id: 29 coverage: 21 Arg 1/9: frozenset({'Fare_Fare > 31.00', 'SibSp_SibSp <= 0.00', 'Age_6.00 < Age <= 24.00'})\n",
+      "id: 30 coverage: 0 Arg 1/0: None\n",
+      "id: 31 coverage: 0 Arg 1/0: None\n",
+      "id: 32 coverage: 0 Arg 1/0: None\n",
+      "id: 33 coverage: 5 Arg 1/3: frozenset({'Fare_Fare > 31.00', 'Age_Age > 35.00', 'Parch_0'})\n",
+      "id: 34 coverage: 9 Arg 1/4: frozenset({'Fare_14.45 < Fare <= 31.00', 'Pclass_2'})\n",
+      "id: 35 coverage: 6 Arg 1/2: frozenset({'Sex_female', 'Fare_7.92 < Fare <= 14.45'})\n",
+      "id: 36 coverage: 0 Arg 1/0: None\n",
+      "id: 37 coverage: 0 Arg 1/0: None\n",
+      "id: 38 coverage: 5 Arg 1/5: frozenset({'Fare_Fare > 31.00', 'SibSp_0.00 < SibSp <= 1.00', 'Age_24.00 < Age <= 35.00'})\n",
+      "id: 39 coverage: 0 Arg 1/0: None\n",
+      "id: 40 coverage: 18 Arg 1/3: frozenset({'Sex_female', 'Fare_7.92 < Fare <= 14.45'})\n",
+      "id: 41 coverage: 13 Arg 1/4: frozenset({'Sex_female', 'Age_Age <= 6.00', 'Parch_0'})\n",
+      "id: 42 coverage: 0 Arg 1/0: None\n",
+      "id: 43 coverage: 0 Arg 1/0: None\n",
+      "id: 44 coverage: 10 Arg 1/5: frozenset({'Parch_2', 'Age_6.00 < Age <= 24.00'})\n",
+      "id: 45 coverage: 13 Arg 1/4: frozenset({'Sex_female', 'SibSp_SibSp <= 0.00', 'Age_24.00 < Age <= 35.00'})\n",
+      "id: 46 coverage: 0 Arg 1/0: None\n",
+      "id: 47 coverage: 11 Arg 1/5: frozenset({'Sex_female', 'Fare_Fare > 31.00', 'SibSp_0.00 < SibSp <= 1.00'})\n",
+      "id: 48 coverage: 14 Arg 1/8: frozenset({'Age_6.00 < Age <= 24.00', 'Parch_1'})\n",
+      "id: 49 coverage: 5 Arg 1/5: frozenset({'Fare_Fare > 31.00', 'SibSp_0.00 < SibSp <= 1.00', 'Age_24.00 < Age <= 35.00'})\n",
+      "id: 50 coverage: 0 Arg 1/0: None\n",
+      "id: 51 coverage: 0 Arg 1/0: None\n",
+      "id: 52 coverage: 0 Arg 1/0: None\n",
+      "id: 53 coverage: 0 Arg 1/0: None\n",
+      "id: 54 coverage: 8 Arg 1/4: frozenset({'Age_Age <= 6.00', 'Parch_1'})\n",
+      "id: 55 coverage: 0 Arg 1/0: None\n",
+      "id: 56 coverage: 0 Arg 1/0: None\n",
+      "id: 57 coverage: 0 Arg 1/0: None\n",
+      "id: 58 coverage: 5 Arg 1/3: frozenset({'Fare_Fare > 31.00', 'Age_Age > 35.00', 'Parch_0'})\n",
+      "id: 59 coverage: 7 Arg 1/3: frozenset({'Age_Age <= 6.00', 'SibSp_0.00 < SibSp <= 1.00'})\n",
+      "id: 60 coverage: 13 Arg 1/4: frozenset({'Sex_female', 'Age_Age <= 6.00', 'Parch_0'})\n",
+      "id: 61 coverage: 0 Arg 1/0: None\n",
+      "id: 62 coverage: 0 Arg 1/0: None\n",
+      "id: 63 coverage: 8 Arg 1/4: frozenset({'Fare_7.92 < Fare <= 14.45', 'Parch_1'})\n",
+      "id: 64 coverage: 2 Arg 1/2: frozenset({'Age_Age > 35.00', 'Parch_2'})\n",
+      "id: 65 coverage: 0 Arg 1/0: None\n",
+      "id: 66 coverage: 7 Arg 1/4: frozenset({'Parch_2', 'SibSp_0.00 < SibSp <= 1.00'})\n",
+      "id: 67 coverage: 0 Arg 1/0: None\n",
+      "id: 68 coverage: 3 Arg 1/5: frozenset({'Fare_Fare > 31.00', 'Pclass_2'})\n",
+      "id: 69 coverage: 3 Arg 1/3: frozenset({'Parch_2', 'Age_Age <= 6.00', 'SibSp_SibSp <= 0.00'})\n",
+      "id: 70 coverage: 0 Arg 1/0: None\n",
+      "id: 71 coverage: 0 Arg 1/0: None\n",
+      "id: 72 coverage: 12 Arg 1/3: frozenset({'Fare_Fare <= 7.92', 'Sex_female'})\n",
+      "id: 73 coverage: 0 Arg 1/0: None\n",
+      "id: 74 coverage: 19 Arg 1/5: frozenset({'Sex_female', 'SibSp_SibSp <= 0.00', 'Age_24.00 < Age <= 35.00'})\n",
+      "id: 75 coverage: 0 Arg 1/0: None\n",
+      "id: 76 coverage: 7 Arg 1/4: frozenset({'Age_6.00 < Age <= 24.00', 'Parch_1'})\n",
+      "id: 77 coverage: 11 Arg 1/5: frozenset({'Sex_female', 'Fare_Fare > 31.00', 'SibSp_0.00 < SibSp <= 1.00'})\n",
+      "id: 78 coverage: 0 Arg 1/0: None\n",
+      "id: 79 coverage: 0 Arg 1/0: None\n",
+      "id: 80 coverage: 0 Arg 1/0: None\n",
+      "id: 81 coverage: 13 Arg 1/4: frozenset({'Sex_female', 'Age_Age <= 6.00', 'Parch_0'})\n",
+      "id: 82 coverage: 15 Arg 1/10: frozenset({'Sex_female', 'Fare_Fare > 31.00', 'SibSp_0.00 < SibSp <= 1.00'})\n",
+      "id: 83 coverage: 13 Arg 1/6: frozenset({'Fare_14.45 < Fare <= 31.00', 'Pclass_2'})\n",
+      "id: 84 coverage: 0 Arg 1/0: None\n",
+      "id: 85 coverage: 0 Arg 1/0: None\n",
+      "id: 86 coverage: 0 Arg 1/0: None\n",
+      "id: 87 coverage: 0 Arg 1/0: None\n",
+      "id: 88 coverage: 18 Arg 1/4: frozenset({'Sex_female', 'Fare_7.92 < Fare <= 14.45'})\n",
+      "id: 89 coverage: 0 Arg 1/0: None\n",
+      "id: 90 coverage: 0 Arg 1/0: None\n",
+      "id: 91 coverage: 0 Arg 1/0: None\n",
+      "id: 92 coverage: 13 Arg 1/6: frozenset({'Fare_14.45 < Fare <= 31.00', 'Pclass_2'})\n",
+      "id: 93 coverage: 11 Arg 1/6: frozenset({'Fare_Fare > 31.00', 'Age_Age > 35.00', 'Parch_0'})\n",
+      "id: 94 coverage: 9 Arg 1/3: frozenset({'Sex_female', 'Age_Age <= 6.00', 'Parch_0'})\n",
+      "id: 95 coverage: 7 Arg 1/5: frozenset({'Pclass_3', 'Fare_Fare > 31.00', 'Parch_0'})\n",
+      "id: 96 coverage: 0 Arg 1/0: None\n",
+      "id: 97 coverage: 7 Arg 1/3: frozenset({'Age_Age <= 6.00', 'SibSp_0.00 < SibSp <= 1.00'})\n",
+      "id: 98 coverage: 9 Arg 1/3: frozenset({'Fare_14.45 < Fare <= 31.00', 'Pclass_2'})\n",
+      "id: 99 coverage: 0 Arg 1/0: None\n",
+      "success =  0.43 (empty= 57 )\n"
      ]
     }
    ],
    "source": [
-    "ext_gen = explainer.extension_generator_from_graph()\n",
-    "#ext_gen = explainer.extension_generator_from_sat(file='../saves/adult_1000_sat.txt')\n",
-    "max_covi_ext = explainer.make_selection('max_covi', ext_gen)"
+    "#ext_gen = explainer.extension_generator_from_graph()\n",
+    "ext_gen = explainer.extension_generator_from_sat(file='../../saves/titanic_100_sat.txt')\n",
+    "#max_covi_ext = explainer.make_selection('max_covi_incl', ext_gen)\n",
+    "max_covi_ext = explainer.make_selection('max_card', ext_gen)\n",
+    "res = explainer.apply_inference(max_covi_ext, 'universal')\n",
+    "#print(res)\n",
+    "\n",
+    "explainer.display_explanations(verbose=True)"
    ]
   },
   {
@@ -821,7 +997,7 @@
     "res = explainer.apply_inference(max_covi_ext, 'universal')\n",
     "#print(res)\n",
     "\n",
-    "explainer.display_explanations()\n"
+    "explainer.display_explanations(verbose=False)\n"
    ]
   },
   {
