--- a/experiments/exp_lending.ipynb
+++ b/experiments/exp_lending.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,8 @@
       "2 potential arg checked ( 871 not minimal)\n",
       "len  9 : 0 ,  0\n",
       "0 potential arg checked ( 99 not minimal)\n",
-      "Saving to  ../saves\\lending_100_minimals.df\n"
+      "Saving to  ../saves\\lending_100_minimals.df\n",
+      "{'loan_amnt': {0, 1, 2, 3}, 'home_ownership': {4, 5, 6}, 'annual_inc': {8, 9, 10, 7}, 'desc': {11, 12, 13, 14}, 'inq_last_6mths': {16, 17, 15}, 'revol_util': {18, 19, 20, 21}, 'last_fico_range_high': {24, 25, 22, 23}, 'last_fico_range_low': {26, 27, 28, 29}, 'pub_rec_bankruptcies': {32, 30, 31}}\n"
      ]
     }
    ],
@@ -134,27 +135,31 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'lending_' + str(nb_vals), compute=True, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'lending_' + str(nb_vals), compute=True, output_path='../saves')\n",
+    "print(explainer.features_p_col)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "edges per node: 207.96021815848573\n"
+      "lending_100\n",
+      "edges per node: 98.20976491862568\n",
+      "553\n"
      ]
     }
    ],
    "source": [
-    "G = explainer.build_attack_graph(compute=False, display_graph=False)\n",
+    "G = explainer.build_attack_graph(compute=True, display_graph=False)\n",
     "print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
     "\n",
-    "explainer.export_graph('asp', '../saves')"
+    "explainer.export_graph('asp', '../saves')\n",
+    "print(len(G.nodes()))"
    ]
   },
   {
@@ -354,6 +359,22 @@
    ],
    "source": [
     "explainer.af_analysis(remove=[\"14745\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ext_gen = explainer.extension_generator_from_graph()\n",
+    "ext_gen = explainer.extension_generator_from_sat(file='../saves/lending_100_sat.txt')\n",
+    "#max_covi_ext = explainer.make_selection('max_covi_incl', ext_gen)\n",
+    "max_covi_ext = explainer.make_selection('max_covi', ext_gen)\n",
+    "res = explainer.apply_inference(max_covi_ext, 'universal')\n",
+    "#print(res)\n",
+    "\n",
+    "explainer.display_explanations(verbose=True)"
    ]
   },
   {
@@ -1009,7 +1030,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
