--- a/experiments/exp_rcdv.ipynb
+++ b/experiments/exp_rcdv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,46 +93,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Race', 'Alcohol', 'Junky', 'Supervised Release', 'Married', 'Felony', 'WorkRelease', 'Crime against Property', 'Crime against Person', 'Gender', 'Priors', 'YearsSchool', 'PrisonViolations', 'Age', 'MonthsServed']\n",
-      "Generating arguments\n",
-      "len  1 : 0 ,  0\n",
-      "39 potential arg checked ( 0 not minimal)\n",
-      "len  2 : 30 ,  53\n",
-      "661 potential arg checked ( 0 not minimal)\n",
-      "len  3 : 369 ,  274\n",
-      "4813 potential arg checked ( 1216 not minimal)\n",
-      "len  4 : 735 ,  655\n",
-      "17965 potential arg checked ( 14452 not minimal)\n",
-      "len  5 : 308 ,  396\n",
-      "40580 potential arg checked ( 69983 not minimal)\n",
-      "len  6 : 36 ,  96\n",
-      "62176 potential arg checked ( 191383 not minimal)\n",
-      "len  7 : 8 ,  5\n",
-      "65280 potential arg checked ( 343199 not minimal)\n",
-      "len  8 : 0 ,  1\n",
-      "47779 potential arg checked ( 428953 not minimal)\n",
-      "len  9 : 0 ,  0\n",
-      "24734 potential arg checked ( 386122 not minimal)\n",
-      "len  10 : 0 ,  0\n",
-      "9073 potential arg checked ( 254306 not minimal)\n",
-      "len  11 : 0 ,  0\n",
-      "2320 potential arg checked ( 122492 not minimal)\n",
-      "len  12 : 0 ,  0\n",
-      "396 potential arg checked ( 42298 not minimal)\n",
-      "len  13 : 0 ,  0\n",
-      "41 potential arg checked ( 9971 not minimal)\n",
-      "len  14 : 0 ,  0\n",
-      "2 potential arg checked ( 1443 not minimal)\n",
-      "len  15 : 0 ,  0\n",
-      "0 potential arg checked ( 97 not minimal)\n",
-      "Saving to  ../saves\\recidivism_100_minimals.df\n"
+      "['Race', 'Alcohol', 'Junky', 'Supervised Release', 'Married', 'Felony', 'WorkRelease', 'Crime against Property', 'Crime against Person', 'Gender', 'Priors', 'YearsSchool', 'PrisonViolations', 'Age', 'MonthsServed']\n"
      ]
     }
    ],
@@ -148,7 +116,7 @@
     "import arg_explainer as ae\n",
     "\n",
     "print(dataset.feature_names)\n",
-    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'recidivism_' + str(nb_vals), compute=True, output_path='../saves')"
+    "explainer = ae.ArgTabularExplainer(c, train_data.iloc[0:nb_vals], y, 'recidivism_' + str(nb_vals), compute=False, output_path='../saves')"
    ]
   },
   {
@@ -157,16 +125,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "MemoryError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments\\exp_rcdv.ipynb Cellule 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_rcdv.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m G \u001b[39m=\u001b[39m explainer\u001b[39m.\u001b[39;49mbuild_attack_graph(compute\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m, display_graph\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/henro/ws/argumentation/argument-based-explainer/experiments/exp_rcdv.ipynb#W5sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39medges per node:\u001b[39m\u001b[39m'\u001b[39m, np\u001b[39m.\u001b[39mmean([\u001b[39mlen\u001b[39m(G\u001b[39m.\u001b[39medges(n)) \u001b[39mfor\u001b[39;00m n \u001b[39min\u001b[39;00m G\u001b[39m.\u001b[39mnodes()]))\n",
-      "File \u001b[1;32mc:\\Users\\henro\\ws\\argumentation\\argument-based-explainer\\experiments/..\\arg_explainer.py:213\u001b[0m, in \u001b[0;36mArgTabularExplainer.build_attack_graph\u001b[1;34m(self, compute, display_graph)\u001b[0m\n\u001b[0;32m    211\u001b[0m     R_atk \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_pickle(path\u001b[39m.\u001b[39mjoin(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39moutput_path, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mexp_name \u001b[39m+\u001b[39m \u001b[39m'\u001b[39m\u001b[39m_R_atk.df\u001b[39m\u001b[39m'\u001b[39m))\n\u001b[0;32m    212\u001b[0m     \u001b[39m#all_args = pd.read_pickle(path.join(self.output_path, self.exp_name + '_all_args.df'))\u001b[39;00m\n\u001b[1;32m--> 213\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mG \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_pickle(pp_aG)\n\u001b[0;32m    215\u001b[0m \u001b[39mif\u001b[39;00m display_graph:\n\u001b[0;32m    216\u001b[0m     nx\u001b[39m.\u001b[39mdraw(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mG, with_labels\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m)\n",
-      "File \u001b[1;32mc:\\Users\\henro\\anaconda3\\envs\\argenv\\lib\\site-packages\\pandas\\io\\pickle.py:205\u001b[0m, in \u001b[0;36mread_pickle\u001b[1;34m(filepath_or_buffer, compression, storage_options)\u001b[0m\n\u001b[0;32m    202\u001b[0m     \u001b[39mwith\u001b[39;00m warnings\u001b[39m.\u001b[39mcatch_warnings(record\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m):\n\u001b[0;32m    203\u001b[0m         \u001b[39m# We want to silence any warnings about, e.g. moved modules.\u001b[39;00m\n\u001b[0;32m    204\u001b[0m         warnings\u001b[39m.\u001b[39msimplefilter(\u001b[39m\"\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mWarning\u001b[39;00m)\n\u001b[1;32m--> 205\u001b[0m         \u001b[39mreturn\u001b[39;00m pickle\u001b[39m.\u001b[39;49mload(handles\u001b[39m.\u001b[39;49mhandle)\n\u001b[0;32m    206\u001b[0m \u001b[39mexcept\u001b[39;00m excs_to_catch:\n\u001b[0;32m    207\u001b[0m     \u001b[39m# e.g.\u001b[39;00m\n\u001b[0;32m    208\u001b[0m     \u001b[39m#  \"No module named 'pandas.core.sparse.series'\"\u001b[39;00m\n\u001b[0;32m    209\u001b[0m     \u001b[39m#  \"Can't get attribute '__nat_unpickle' on <module 'pandas._libs.tslib\"\u001b[39;00m\n\u001b[0;32m    210\u001b[0m     \u001b[39mreturn\u001b[39;00m pc\u001b[39m.\u001b[39mload(handles\u001b[39m.\u001b[39mhandle, encoding\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m)\n",
-      "\u001b[1;31mMemoryError\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "edges per node: 1177.1645313553609\n"
      ]
     }
    ],
@@ -174,7 +136,7 @@
     "G = explainer.build_attack_graph(compute=False, display_graph=False)\n",
     "print('edges per node:', np.mean([len(G.edges(n)) for n in G.nodes()]))\n",
     "\n",
-    "#explainer.export_graph('asp', '../saves')"
+    "explainer.export_graph('asp', '../saves')"
    ]
   },
   {
@@ -193,6 +155,134 @@
    ],
    "source": [
     "explainer.af_analysis()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using pre-processed file...\n",
+      "Reading ../saves/recidivism_100_sat_preprocessed.txt\n",
+      "Time for selection:  27.975617170333862\n",
+      "Len max_cov_exts:  4\n",
+      "id: 0 coverage: 0 Arg 1/0: None\n",
+      "id: 1 coverage: 4 Arg 1/1: frozenset({'YearsSchool_8.00 < YearsSchool <= 10.00', 'Race_0', 'Priors_2', 'Crime against Property_1'})\n",
+      "id: 2 coverage: 4 Arg 1/4: frozenset({'Race_1', 'Crime against Property_0', 'Age_21.00 < Age <= 26.00', 'MonthsServed_9.00 < MonthsServed <= 24.00'})\n",
+      "id: 3 coverage: 0 Arg 1/0: None\n",
+      "id: 4 coverage: 9 Arg 1/8: frozenset({'Race_1', 'Alcohol_0', 'Supervised Release_0', 'Crime against Property_1'})\n",
+      "id: 5 coverage: 0 Arg 1/0: None\n",
+      "id: 6 coverage: 4 Arg 1/1: frozenset({'Race_1', 'YearsSchool_YearsSchool > 11.00', 'WorkRelease_0'})\n",
+      "id: 7 coverage: 0 Arg 1/0: None\n",
+      "id: 8 coverage: 9 Arg 1/2: frozenset({'Crime against Person_0', 'Alcohol_1', 'Priors_2', 'PrisonViolations_0', 'Race_1'})\n",
+      "id: 9 coverage: 21 Arg 1/14: frozenset({'Race_1', 'Alcohol_0', 'Supervised Release_0', 'Crime against Property_1'})\n",
+      "id: 10 coverage: 0 Arg 1/0: None\n",
+      "id: 11 coverage: 16 Arg 1/4: frozenset({'Crime against Person_0', 'Alcohol_1', 'Supervised Release_1', 'PrisonViolations_0', 'Race_1'})\n",
+      "id: 12 coverage: 4 Arg 1/5: frozenset({'Alcohol_0', 'MonthsServed_MonthsServed > 24.00', 'Crime against Property_1', 'Race_1', 'PrisonViolations_1'})\n",
+      "id: 13 coverage: 0 Arg 1/0: None\n",
+      "id: 14 coverage: 10 Arg 1/3: frozenset({'Race_1', 'Crime against Property_0', 'WorkRelease_1', 'MonthsServed_9.00 < MonthsServed <= 24.00'})\n",
+      "id: 15 coverage: 0 Arg 1/0: None\n",
+      "id: 16 coverage: 0 Arg 1/0: None\n",
+      "id: 17 coverage: 4 Arg 1/4: frozenset({'Alcohol_0', 'MonthsServed_MonthsServed > 24.00', 'Crime against Property_1', 'Race_1', 'PrisonViolations_1'})\n",
+      "id: 18 coverage: 9 Arg 1/1: frozenset({'Crime against Person_0', 'Alcohol_1', 'Supervised Release_1', 'PrisonViolations_0', 'Race_1'})\n",
+      "id: 19 coverage: 2 Arg 1/1: frozenset({'WorkRelease_1', 'MonthsServed_MonthsServed > 24.00', 'Crime against Property_0', 'Race_1', 'PrisonViolations_1'})\n",
+      "id: 20 coverage: 0 Arg 1/0: None\n",
+      "id: 21 coverage: 0 Arg 1/0: None\n",
+      "id: 22 coverage: 0 Arg 1/0: None\n",
+      "id: 23 coverage: 8 Arg 1/2: frozenset({'Race_1', 'YearsSchool_8.00 < YearsSchool <= 10.00', 'MonthsServed_4.00 < MonthsServed <= 9.00'})\n",
+      "id: 24 coverage: 4 Arg 1/2: frozenset({'YearsSchool_8.00 < YearsSchool <= 10.00', 'Race_0', 'Priors_2', 'MonthsServed_MonthsServed > 24.00'})\n",
+      "id: 25 coverage: 0 Arg 1/0: None\n",
+      "id: 26 coverage: 0 Arg 1/0: None\n",
+      "id: 27 coverage: 14 Arg 1/6: frozenset({'Race_1', 'Age_Age <= 21.00', 'MonthsServed_MonthsServed <= 4.00'})\n",
+      "id: 28 coverage: 10 Arg 1/2: frozenset({'Race_1', 'YearsSchool_8.00 < YearsSchool <= 10.00', 'MonthsServed_4.00 < MonthsServed <= 9.00'})\n",
+      "id: 29 coverage: 0 Arg 1/0: None\n",
+      "id: 30 coverage: 0 Arg 1/0: None\n",
+      "id: 31 coverage: 9 Arg 1/3: frozenset({'Race_1', 'Age_21.00 < Age <= 26.00', 'MonthsServed_4.00 < MonthsServed <= 9.00'})\n",
+      "id: 32 coverage: 2 Arg 1/1: frozenset({'WorkRelease_1', 'MonthsServed_MonthsServed > 24.00', 'Crime against Property_0', 'Race_1', 'PrisonViolations_1'})\n",
+      "id: 33 coverage: 0 Arg 1/0: None\n",
+      "id: 34 coverage: 0 Arg 1/0: None\n",
+      "id: 35 coverage: 0 Arg 1/0: None\n",
+      "id: 36 coverage: 3 Arg 1/1: frozenset({'Supervised Release_0', 'YearsSchool_8.00 < YearsSchool <= 10.00', 'Race_0', 'Alcohol_0'})\n",
+      "id: 37 coverage: 0 Arg 1/0: None\n",
+      "id: 38 coverage: 6 Arg 1/4: frozenset({'Alcohol_0', 'WorkRelease_1', 'Crime against Property_1', 'Priors_1', 'Race_1'})\n",
+      "id: 39 coverage: 0 Arg 1/0: None\n",
+      "id: 40 coverage: 18 Arg 1/5: frozenset({'Race_1', 'Alcohol_1', 'WorkRelease_0', 'Priors_1'})\n",
+      "id: 41 coverage: 4 Arg 1/1: frozenset({'Race_1', 'YearsSchool_YearsSchool > 11.00', 'WorkRelease_0'})\n",
+      "id: 42 coverage: 4 Arg 1/2: frozenset({'Race_1', 'Supervised Release_0', 'MonthsServed_MonthsServed <= 4.00'})\n",
+      "id: 43 coverage: 0 Arg 1/0: None\n",
+      "id: 44 coverage: 0 Arg 1/0: None\n",
+      "id: 45 coverage: 0 Arg 1/0: None\n",
+      "id: 46 coverage: 4 Arg 1/1: frozenset({'YearsSchool_8.00 < YearsSchool <= 10.00', 'Race_0', 'Priors_2', 'Crime against Property_1'})\n",
+      "id: 47 coverage: 3 Arg 1/1: frozenset({'Supervised Release_0', 'YearsSchool_8.00 < YearsSchool <= 10.00', 'Race_0', 'Alcohol_0'})\n",
+      "id: 48 coverage: 0 Arg 1/0: None\n",
+      "id: 49 coverage: 4 Arg 1/2: frozenset({'Race_1', 'Crime against Property_1', 'MonthsServed_MonthsServed <= 4.00'})\n",
+      "id: 50 coverage: 0 Arg 1/0: None\n",
+      "id: 51 coverage: 0 Arg 1/0: None\n",
+      "id: 52 coverage: 12 Arg 1/3: frozenset({'Race_1', 'YearsSchool_8.00 < YearsSchool <= 10.00', 'MonthsServed_4.00 < MonthsServed <= 9.00'})\n",
+      "id: 53 coverage: 13 Arg 1/12: frozenset({'Race_1', 'Alcohol_0', 'Supervised Release_0', 'Crime against Property_1'})\n",
+      "id: 54 coverage: 0 Arg 1/0: None\n",
+      "id: 55 coverage: 0 Arg 1/0: None\n",
+      "id: 56 coverage: 0 Arg 1/0: None\n",
+      "id: 57 coverage: 0 Arg 1/0: None\n",
+      "id: 58 coverage: 16 Arg 1/5: frozenset({'Crime against Person_0', 'Alcohol_1', 'Supervised Release_1', 'PrisonViolations_0', 'Race_1'})\n",
+      "id: 59 coverage: 0 Arg 1/0: None\n",
+      "id: 60 coverage: 0 Arg 1/0: None\n",
+      "id: 61 coverage: 0 Arg 1/0: None\n",
+      "id: 62 coverage: 15 Arg 1/8: frozenset({'Race_1', 'Crime against Property_1', 'WorkRelease_0', 'MonthsServed_9.00 < MonthsServed <= 24.00'})\n",
+      "id: 63 coverage: 0 Arg 1/0: None\n",
+      "id: 64 coverage: 0 Arg 1/0: None\n",
+      "id: 65 coverage: 1 Arg 1/1: frozenset({'YearsSchool_YearsSchool <= 8.00', 'WorkRelease_0', 'MonthsServed_MonthsServed > 24.00', 'Race_1', 'PrisonViolations_1'})\n",
+      "id: 66 coverage: 20 Arg 1/10: frozenset({'Race_1', 'Alcohol_0', 'Supervised Release_0', 'Crime against Property_1'})\n",
+      "id: 67 coverage: 0 Arg 1/0: None\n",
+      "id: 68 coverage: 0 Arg 1/0: None\n",
+      "id: 69 coverage: 0 Arg 1/0: None\n",
+      "id: 70 coverage: 0 Arg 1/0: None\n",
+      "id: 71 coverage: 0 Arg 1/0: None\n",
+      "id: 72 coverage: 0 Arg 1/0: None\n",
+      "id: 73 coverage: 0 Arg 1/0: None\n",
+      "id: 74 coverage: 0 Arg 1/0: None\n",
+      "id: 75 coverage: 12 Arg 1/14: frozenset({'Race_1', 'Junky_1', 'Crime against Property_1', 'Age_Age <= 21.00'})\n",
+      "id: 76 coverage: 9 Arg 1/5: frozenset({'Alcohol_0', 'MonthsServed_MonthsServed > 24.00', 'Crime against Property_1', 'Race_1', 'PrisonViolations_1'})\n",
+      "id: 77 coverage: 0 Arg 1/0: None\n",
+      "id: 78 coverage: 0 Arg 1/0: None\n",
+      "id: 79 coverage: 0 Arg 1/0: None\n",
+      "id: 80 coverage: 0 Arg 1/0: None\n",
+      "id: 81 coverage: 0 Arg 1/0: None\n",
+      "id: 82 coverage: 0 Arg 1/0: None\n",
+      "id: 83 coverage: 15 Arg 1/3: frozenset({'Race_1', 'YearsSchool_8.00 < YearsSchool <= 10.00', 'MonthsServed_4.00 < MonthsServed <= 9.00'})\n",
+      "id: 84 coverage: 17 Arg 1/13: frozenset({'Crime against Person_0', 'Alcohol_1', 'Supervised Release_1', 'PrisonViolations_0', 'Race_1'})\n",
+      "id: 85 coverage: 0 Arg 1/0: None\n",
+      "id: 86 coverage: 17 Arg 1/5: frozenset({'Race_1', 'WorkRelease_0', 'MonthsServed_4.00 < MonthsServed <= 9.00', 'PrisonViolations_0'})\n",
+      "id: 87 coverage: 0 Arg 1/0: None\n",
+      "id: 88 coverage: 6 Arg 1/3: frozenset({'Race_1', 'YearsSchool_8.00 < YearsSchool <= 10.00', 'MonthsServed_MonthsServed <= 4.00'})\n",
+      "id: 89 coverage: 6 Arg 1/7: frozenset({'WorkRelease_1', 'Priors_1', 'Race_1', 'MonthsServed_9.00 < MonthsServed <= 24.00', 'PrisonViolations_1'})\n",
+      "id: 90 coverage: 0 Arg 1/0: None\n",
+      "id: 91 coverage: 6 Arg 1/3: frozenset({'Supervised Release_0', 'YearsSchool_8.00 < YearsSchool <= 10.00', 'Race_0', 'Alcohol_0'})\n",
+      "id: 92 coverage: 17 Arg 1/8: frozenset({'Race_1', 'WorkRelease_0', 'MonthsServed_4.00 < MonthsServed <= 9.00', 'PrisonViolations_0'})\n",
+      "id: 93 coverage: 11 Arg 1/3: frozenset({'Race_1', 'Alcohol_0', 'Priors_2', 'WorkRelease_0'})\n",
+      "id: 94 coverage: 0 Arg 1/0: None\n",
+      "id: 95 coverage: 13 Arg 1/5: frozenset({'Race_1', 'WorkRelease_0', 'Crime against Property_1', 'Felony_0'})\n",
+      "id: 96 coverage: 2 Arg 1/2: frozenset({'Race_1', 'Crime against Property_0', 'WorkRelease_1', 'MonthsServed_9.00 < MonthsServed <= 24.00'})\n",
+      "id: 97 coverage: 0 Arg 1/0: None\n",
+      "id: 98 coverage: 0 Arg 1/0: None\n",
+      "id: 99 coverage: 16 Arg 1/5: frozenset({'Crime against Person_0', 'Alcohol_1', 'Supervised Release_1', 'PrisonViolations_0', 'Race_1'})\n",
+      "success =  0.45 (empty= 55 )\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ext_gen = explainer.extension_generator_from_graph()\n",
+    "ext_gen = explainer.extension_generator_from_sat(file='../saves/recidivism_100_sat.txt')\n",
+    "#max_covi_ext = explainer.make_selection('max_covi_incl', ext_gen)\n",
+    "max_covi_ext = explainer.make_selection('max_covi', ext_gen)\n",
+    "res = explainer.apply_inference(max_covi_ext, 'universal')\n",
+    "#print(res)\n",
+    "\n",
+    "explainer.display_explanations(verbose=True)"
    ]
   },
   {
@@ -952,7 +1042,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Apr  4 2022, 05:22:27) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
